tests/paczka1/fuzzy1/86941761.err
Error in line 7: kEz21Q9MC S807 90,3
Error in line 19: l2k0 S807 60,5
Error in line 23: CvwXK5Qwn S418 191,1
Error in line 37: S807 A895 130,68
Error in line 33: CvwXK5Qwn A496 98,6
